Update bot to use provided YouTube cookies

--- a/render.yaml
+++ b/render.yaml
@@ -10,5 +10,7 @@ services:
         sync: false
       - key: MONGO_URI
         sync: false
+      - key: YOUTUBE_COOKIES
+        sync: false
       - key: PORT
         value: 8080
