--- a/fly.toml
+++ b/fly.toml
@@ -1,37 +1,17 @@
-<<<<<<< HEAD
-app = "your-app-name"
+app = "chachyanaa"
 primary_region = "ams"
-=======
-# fly.toml app configuration file generated for app-dark-dew-9451 on 2026-02-03T16:40:43Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'app-dark-dew-9451'
-primary_region = 'iad'
-
-[build]
->>>>>>> ea3eb74c3d352ac77d61f6a1967df71c51fb3683
 
 [http_service]
   internal_port = 8080
   force_https = true
-<<<<<<< HEAD
   auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 1
 
 [env]
   PORT = "8080"
-=======
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  memory = "1gb"
+  cpu_kind = "shared"
   cpus = 1
-  memory_mb = 256
->>>>>>> ea3eb74c3d352ac77d61f6a1967df71c51fb3683
